fixed spacing issue

--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -20,7 +20,6 @@
 }
 
 .cs-bw-booking-bookingformContainer {
-  max-width: 1130px;
   margin: 0 auto;
   z-index: 1;
   color: #0f172c;
